cmake_minimum_required(VERSION 3.2)
project(CppStudy LANGUAGES C CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE DEBUG)
endif(NOT CMAKE_BUILD_TYPE)
add_subdirectory(chapter-3)
add_subdirectory(move)
add_subdirectory(const)
add_subdirectory(class)
add_subdirectory(share_ptr)
add_subdirectory(virtual)